--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -26,6 +26,8 @@ jobs:
           distribution: goreleaser
           version: latest
           args: release
+          ignore:
+            goarch: arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload assets
