--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,6 +1,6 @@
 builds:
   -
-    main: tizbac/pmoxs3backuproxy/cmd/pmoxs3backuproxy
+    main: ./cmd/pmoxs3backuproxy
     binary: "{{ .ProjectName }}-{{ .Os }}-{{ .Arch }}"
     env:
       - CGO_ENABLED=0
