--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -4,11 +4,12 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      uses: actions/checkout@v1
-      uses: infleet/minio-action@v0.0.1
-      with:
-        port: "9000"
-        version: "latest"
-        username: "minio"
-        password: "minio"
-        bucket : "backups"
+      - uses: actions/checkout@v1
+      - name: setup minio
+        uses: infleet/minio-action@v0.0.1
+        with:
+          port: "9000"
+          version: "latest"
+          username: "minio"
+          password: "minio"
+          bucket : "backups"
