--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -21,6 +21,14 @@ jobs:
           mc alias set 'ci' 'http://127.0.0.1:9000' 'minioadmin' 'minioadmin'
           mc mb ci/backups
           mc admin user svcacct add ci minioadmin --json > /tmp/minio.json
+      - name: "Install proxmox backup client"
+        run: |
+          apt update -y >/dev/null 2>&1
+          apt install wget -y >/dev/null 2>&1
+          wget https://enterprise.proxmox.com/debian/proxmox-release-bookworm.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bookworm.gpg
+          echo "deb http://download.proxmox.com/debian/pbs bookworm pbs-no-subscription" > /etc/apt/sources.list.d/pbs.list
+          apt update -y >/dev/null 2>&1
+          apt install -y proxmox-backup-client
       - name: "Start backup proxy"
         run: |
           go run -v tizbac/pmoxs3backuproxy/cmd/pmoxs3backuproxy -endpoint 127.0.0.1:9000  -bind 0.0.0.0:8007 -ticketexpire 120 -debug &
