--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -26,7 +26,7 @@ jobs:
           sudo apt update -y >/dev/null 2>&1
           sudo apt install wget -y >/dev/null 2>&1
           sudo wget https://enterprise.proxmox.com/debian/proxmox-release-bookworm.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bookworm.gpg
-          "deb http://download.proxmox.com/debian/pbs-client bookworm main" | sudo tee -a /etc/apt/sources.list.d/pbs.list
+          echo "deb http://download.proxmox.com/debian/pbs-client bookworm main" | sudo tee -a /etc/apt/sources.list.d/pbs.list
           sudo apt update -y >/dev/null 2>&1
           sudo apt install -y proxmox-backup-client
       - name: "Start backup proxy"
