--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -30,6 +30,8 @@ jobs:
       - name: "Create backup"
         run: |
           nohup go run tizbac/pmoxs3backuproxy/cmd/pmoxs3backuproxy -endpoint 127.0.0.1:9000 -bind 127.0.0.1:8007 -debug > nohup.out 2> nohup.err < /dev/null &
+          cat nohup.out
+          cat nohup.err
           export PBS_PASSWORD=$(jq -r .secretKey < /tmp/minio.json)
           export USERNAME=$(jq -r .accessKey < /tmp/minio.json)
           sudo -E proxmox-backup-client backup root.pxar:/etc --repository "$USERNAME@pbs@127.0.0.1:backups"
