--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -29,7 +29,8 @@ jobs:
           sudo apt install -y proxmox-backup-client
       - name: "Create backup"
         run: |
-          nohup go run tizbac/pmoxs3backuproxy/cmd/pmoxs3backuproxy -endpoint 127.0.0.1:9000 -bind 127.0.0.1:8007 -debug > nohup.out 2> nohup.err < /dev/null &
+          go build -v tizbac/pmoxs3backuproxy/cmd/pmoxs3backuproxy
+          nohup ./pmoxs3backuproxy -endpoint 127.0.0.1:9000 -bind 127.0.0.1:8007 -debug > nohup.out 2> nohup.err < /dev/null &
           cat nohup.out
           cat nohup.err
           export PBS_PASSWORD=$(jq -r .secretKey < /tmp/minio.json)
