--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -22,7 +22,7 @@ jobs:
       - name: "Install proxmox backup client"
         run: |
           sudo apt update -y >/dev/null 2>&1
-          sudo apt install jq wget -y >/dev/null 2>&1
+          sudo apt install jq wget gawk -y >/dev/null 2>&1
           sudo wget https://enterprise.proxmox.com/debian/proxmox-release-bullseye.gpg -O /etc/apt/trusted.gpg.d/proxmox-release-bookworm.gpg
           echo "deb http://download.proxmox.com/debian/pbs-client bullseye main" | sudo tee -a /etc/apt/sources.list.d/pbs.list
           sudo apt update -y >/dev/null 2>&1
@@ -40,8 +40,10 @@ jobs:
           export PBS_FINGERPRINT="55:BC:29:4B:BA:B6:A1:03:42:A9:D8:51:14:9D:BD:00:D2:2A:9C:A1:B8:4A:85:E1:AF:B2:0C:48:40:D6:CC:A4"
           export REPO="$USERNAME@pbs@127.0.0.1:backups"
           echo "create backup"
-          sudo -E proxmox-backup-client backup proxy.pxar:. --repository "$REPO"
+          sudo -E proxmox-backup-client backup proxy.pxar:. --repository "$REPO" --backup-id dynamic
           echo "restore backup"
           proxmox-backup-client snapshot list --repository "$REPO"
-          VER=$(proxmox-backup-client snapshot list --repository "$REPO" --output-format text | tail -n 2 | grep host  | awk '{print $2 }')
+          proxmox-backup-client snapshot list --repository "$REPO" > /tmp/backups 2>&1 > /tmp/backups 2>&1
+          VER=$(grep dynamic /tmp/backups | awk '{print $2 }')
+          echo $VER
           sudo -E proxmox-backup-client restore "$VER" proxy.pxar /tmp/restore/ --repository "$REPO"
