--- a/.github/workflows/ci-dynamic.yml
+++ b/.github/workflows/ci-dynamic.yml
@@ -39,7 +39,7 @@ jobs:
           export BUCKET="backups"
           export ENDPOINT="127.0.0.1:9000"
           export PBS_FINGERPRINT="55:BC:29:4B:BA:B6:A1:03:42:A9:D8:51:14:9D:BD:00:D2:2A:9C:A1:B8:4A:85:E1:AF:B2:0C:48:40:D6:CC:A4"
-          export PBS_REPOSITORY="$USERNAME@pbs@$ENDPOINT:$BUCKET"
+          export PBS_REPOSITORY="$USERNAME@pbs@127.0.0.1:$BUCKET"
           echo "start proxy"
           nohup ./pmoxs3backuproxy -endpoint $ENDPOINT -bind 127.0.0.1:8007 -debug > nohup.out 2> nohup.err < /dev/null &
           echo "create backup"
@@ -61,4 +61,4 @@ jobs:
           proxmox-backup-client snapshot protected update "$VER" true
           proxmox-backup-client snapshot protected show "$VER" | grep -q true
           echo "run GC"
-          ./garbagecollector -endpoint 127.0.0.1:9000 -accesskey "$USERNAME" -secretkey "$PBS_PASSWORD" -bucket backups
+          ./garbagecollector -endpoint $ENDPOINT -accesskey "$USERNAME" -secretkey "$PBS_PASSWORD" -bucket backups
